<resources>
    <string name="app_name">MyApp</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_up">Sign up</string>
    <string name="here1"><u>Already have account? Sing in here!</u></string>
    <string name="here2"><u>Haven`t account? Sing up here!</u></string>
    <string name="sign_in">Login</string>
    <string name="cong">Congratulations</string>
    <string name="logout">Logout!</string>
    <string name="welcome">Welcome</string>
    <string name="somethingGoneWrong">Something gone wrong</string>
    <string name="emailAlreeadyExist">Sorry but such email already used!</string>
    <string name="correctPhone">Phone must be 13 symbols, and starts with +380</string>
    <string name="invalidEmail">Invalid email!</string>
    <string name="correctPassword">Password must be 8+ symbols!</string>
    <string name="pressToExit">Press again to exit</string>
    <string name="emptyFields">Fields are empty!</string>
    <string name="loginSucceful">Login successful</string>
    <string name="pleaseLogin">Please Login!</string>
    <string name="incorrectData">Email Or Password Incorrect! Please Try Again</string>
    <string name="conError">Internet connection losed!</string>
    <string name="close">Close</string>

</resources>
